# icub-main

src/libraries/icubmod/canBusSkin/: CMakeLists.txt
src/libraries/icubmod/embObjLib/: CMakeLists.txt
src/libraries/icubmod/embObjSkin/: embObjSkin.cpp
